# pr-context

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
plan/: PLAN.md
src/pr_context/: __main__.py  change_detector.py  cli.py  config.py  db.py  github_client.py  models.py  queries.py  server.py
tests/: test_change_detector.py  test_db.py  test_github_client.py
